# blazing_fast_CI_GitHub_Actions_Poetry_Black_PyTest

./: README.md
.github/workflows/: ci.yml
my_project/: project.db  pyproject.toml
my_project/project/: settings.py
