[tool.poetry]
name = "my_project"
version = "0.1.0"
description = ""
authors = ["Hugo A. F. dos Santos <hugoafdossantos.io@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
confidential = "^2.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.9.0"
pytest-django = "^3.9.0"
pytest-xdist = "^1.32.0"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
